Adjust button group and buttons for different devices

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <h1 id="type-text"></h1>
         <p id="home-p">I solve problems with design and code, put together in a creative solution.</p>
         <div class="button-group">
-            <a href="#about" class="primary-button">Get to know me</a>
-            <a href="#contact" class="primary-button">Contact me</a>
+            <a href="#about" class=" button primary-button">Get to know me</a>
+            <a href="#contact" class="button secondary-button">Contact me</a>
         </div>
 
     </div>
@@ -42,8 +42,8 @@
             <div class="section-headline-underline" id="section-headline-underline-about"></div>
         </div>
         <div id="profile-img-div">
-             <img src="images/profil.jpg" id="profile-img"/>
-         </div>
+            <img src="images/profil.jpg" id="profile-img"/>
+        </div>
         <div class="section-text" id="section-text-about">
             <p>
                 I'm a 23 year old software developer from Berlin, Germany.
@@ -95,16 +95,16 @@
                 If you want to get to know more about me and my work, are interested in a cooperation or have any
                 questions, feel free to contact me.
             </p>
-                <a href="mailto:liviacodes@t-online.de" class="primary-button" id="contact-btn">Leave a message</a>
-        </div>
-        <div>
 
+        </div>
+        <div id="button-div">
+            <a href="mailto:liviacodes@t-online.de" class="button primary-button" id="contact-btn">Leave a
+                message</a>
         </div>
         <div id="contact-img-div">
             <img src="images/mailbox.svg" id="contact-img">
         </div>
     </div>
-
 </section>
 <footer>
     <div>
