Create header and add padding to sections

--- a/index.html
+++ b/index.html
@@ -19,93 +19,95 @@
         <h3>Livia</h3>
     </div>
 </nav>
-<section id="home" class="grid">
-    <div class="home-text">
-        <h3>Hi I'm Livia Welschinger</h3>
-        <!--        <h1>Full stack developer</h1>-->
-        <h1 id="type-text"></h1>
-        <p id="home-p">I solve problems with design and code, put together in a creative solution.</p>
-        <div class="button-group">
-            <a href="#about" class=" button primary-button">Get to know me</a>
-            <a href="#contact" class="button secondary-button">Contact me</a>
-        </div>
-
-    </div>
-    <div id="home-img-div">
-        <img src="images/Landing%20page%20illustration.svg" id="home-img">
-    </div>
-</section>
-<section id="about">
-    <div class="grid">
-        <div class="section-headline-div">
-            <h3>About me</h3>
-            <div class="section-headline-underline" id="section-headline-underline-about"></div>
-        </div>
-        <div id="profile-img-div">
-            <img src="images/profil.jpg" id="profile-img"/>
-        </div>
-        <div class="section-text" id="section-text-about">
-            <p>
-                I'm a 23 year old software developer from Berlin, Germany.
-                Studying Business Computing at the University of Applied Sciences in Berlin I had the chance to get to
-                know not
-                only the field of computer science but also about the business side with courses such as marketing.
-                For me, programming is not just a job, it’s my passion. I love to solve real problems,
-                being creative and to build something new. Helping others to become a full stack developer, I document
-                my
-                learning process on <a href="https://www.instagram.com/liviacodes/" target="_blank" class="text-link">Instagram</a>,
-                where I share my progress, tips and tricks with over 4000 followers.
-            </p>
+<main>
+    <header id="home" class="grid">
+        <div class="home-text">
+            <h3>Hi I'm Livia Welschinger</h3>
+            <!--        <h1>Full stack developer</h1>-->
+            <h1 id="type-text"></h1>
+            <p id="home-p">I solve problems with design and code, put together in a creative solution.</p>
+            <div class="button-group">
+                <a href="#about" class=" button primary-button">Get to know me</a>
+                <a href="#contact" class="button secondary-button">Contact me</a>
+            </div>
 
         </div>
-    </div>
-    <div class="row">
-        <div class="column">
-            <a><img src="images/instagram-setup.JPG" id="setup-img"></a>
-            <a><img src="images/instagram-flowers-laptop.JPG" id="flowers-img"></a>
+        <div id="home-img-div">
+            <img src="images/Landing%20page%20illustration.svg" id="home-img">
         </div>
-        <div class="column">
-            <a><img src="images/instagram-desk.jpg" id="desk-img"></a>
-            <a><img src="images/instagram-smartphone.JPG" id="smartphone-img"></a>
-        </div>
-    </div>
-</section>
-<section id="projects">
-    <div class="grid">
-        <div class="section-headline-div">
-            <h3>My projects</h3>
-            <div class="section-headline-underline" id="section-headline-underline-projects"></div>
-        </div>
-        <div class="section-text">
-            <p>
-                I really enjoy building things and being creative. Have a look on some of my projects I have been
-                working on.
-            </p>
-        </div>
-    </div>
-</section>
-<section id="contact">
-    <div class="grid">
-        <div class="section-headline-div">
-            <h3>Contact me</h3>
-            <div class="section-headline-underline" id="section-headline-underline-contact"></div>
-        </div>
-        <div class="section-text" id="section-text-contact">
-            <p>
-                If you want to get to know more about me and my work, are interested in a cooperation or have any
-                questions, feel free to contact me.
-            </p>
+    </header>
+    <section id="about">
+        <div class="grid">
+            <div class="section-headline-div">
+                <h3>About me</h3>
+                <div class="section-headline-underline" id="section-headline-underline-about"></div>
+            </div>
+            <div id="profile-img-div">
+                <img src="images/profil.jpg" id="profile-img"/>
+            </div>
+            <div class="section-text" id="section-text-about">
+                <p>
+                    I'm a 23 year old software developer from Berlin, Germany.
+                    Studying Business Computing at the University of Applied Sciences in Berlin I had the chance to get to
+                    know not
+                    only the field of computer science but also about the business side with courses such as marketing.
+                    For me, programming is not just a job, it’s my passion. I love to solve real problems,
+                    being creative and to build something new. Helping others to become a full stack developer, I document
+                    my
+                    learning process on <a href="https://www.instagram.com/liviacodes/" target="_blank" class="text-link">Instagram</a>,
+                    where I share my progress, tips and tricks with over 4000 followers.
+                </p>
 
+            </div>
         </div>
-        <div id="button-div">
-            <a href="mailto:liviacodes@t-online.de" class="button primary-button" id="contact-btn">Leave a
-                message</a>
+        <div class="row">
+            <div class="column">
+                <a><img src="images/instagram-setup.JPG" id="setup-img"></a>
+                <a><img src="images/instagram-flowers-laptop.JPG" id="flowers-img"></a>
+            </div>
+            <div class="column">
+                <a><img src="images/instagram-desk.jpg" id="desk-img"></a>
+                <a><img src="images/instagram-smartphone.JPG" id="smartphone-img"></a>
+            </div>
         </div>
-        <div id="contact-img-div">
-            <img src="images/mailbox.svg" id="contact-img">
+    </section>
+    <section id="projects">
+        <div class="grid">
+            <div class="section-headline-div">
+                <h3>My projects</h3>
+                <div class="section-headline-underline" id="section-headline-underline-projects"></div>
+            </div>
+            <div class="section-text">
+                <p>
+                    I really enjoy building things and being creative. Have a look on some of my projects I have been
+                    working on.
+                </p>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+    <section id="contact">
+        <div class="grid">
+            <div class="section-headline-div">
+                <h3>Contact me</h3>
+                <div class="section-headline-underline" id="section-headline-underline-contact"></div>
+            </div>
+            <div class="section-text" id="section-text-contact">
+                <p>
+                    If you want to get to know more about me and my work, are interested in a cooperation or have any
+                    questions, feel free to contact me.
+                </p>
+
+            </div>
+            <div id="button-div">
+                <a href="mailto:liviacodes@t-online.de" class="button primary-button" id="contact-btn">Leave a
+                    message</a>
+            </div>
+            <div id="contact-img-div">
+                <img src="images/mailbox.svg" id="contact-img">
+            </div>
+        </div>
+    </section>
+</main>
 <footer>
     <div>
         <p class="p-footer">© Livia Welschinger</p>
