Change margin and padding of header section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </nav>
 <main>
     <header id="home" class="grid">
-        <div class="home-text">
+        <div id="home-text">
             <h3>Hi I'm Livia Welschinger</h3>
             <!--        <h1>Full stack developer</h1>-->
             <h1 id="type-text"></h1>
