--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
 </main>
 <footer>
     <div>
-        <p class="p-footer">© Livia Welschinger</p>
-        <a class="text-link" target="_blank">copyright page</a>
+        <p class="p-footer"><small>Copyright &copy; 2020 Livia Welschinger. All Rights Reserved</small></p>
     </div>
     <div class="social-icons">
         <a href="https://github.com/liviawelschinger" target="_blank"><img class="icon"
