Move image folder to assets folder

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         </div>
         <div id="home-img-div">
-            <img src="images/Landing%20page%20illustration.svg" id="home-img">
+            <img src="assets/images/Landing%20page%20illustration.svg" id="home-img">
         </div>
     </header>
     <section id="about">
@@ -43,7 +43,7 @@
                 <div class="section-headline-underline" id="section-headline-underline-about"></div>
             </div>
             <div id="profile-img-div">
-                <img src="images/profil.jpg" id="profile-img"/>
+                <img src="assets/images/profil.jpg" id="profile-img"/>
             </div>
             <div class="section-text" id="section-text-about">
                 <p>
@@ -62,12 +62,12 @@
         </div>
         <div class="row">
             <div class="column">
-                <a><img src="images/instagram-setup.JPG" id="setup-img"></a>
-                <a><img src="images/instagram-flowers-laptop.JPG" id="flowers-img"></a>
+                <a><img src="assets/images/instagram-setup.JPG" id="setup-img"></a>
+                <a><img src="assets/images/instagram-flowers-laptop.JPG" id="flowers-img"></a>
             </div>
             <div class="column">
-                <a><img src="images/instagram-desk.jpg" id="desk-img"></a>
-                <a><img src="images/instagram-smartphone.JPG" id="smartphone-img"></a>
+                <a><img src="assets/images/instagram-desk.jpg" id="desk-img"></a>
+                <a><img src="assets/images/instagram-smartphone.JPG" id="smartphone-img"></a>
             </div>
         </div>
     </section>
@@ -104,7 +104,7 @@
             </div>
 
             <div id="contact-img-div">
-                <img src="images/mailbox.svg" id="contact-img">
+                <img src="assets/images/mailbox.svg" id="contact-img">
             </div>
         </div>
     </section>
@@ -115,13 +115,13 @@
     </div>
     <div class="social-icons">
         <a href="https://github.com/liviawelschinger" target="_blank"><img class="icon"
-                                                                           src="images/github.png"></a>
+                                                                           src="assets/images/github.png"></a>
         <a href="https://www.instagram.com/liviacodes/?hl=de" target="_blank"> <img class="icon"
-                                                                                    src="images/instagram.png"></a>
+                                                                                    src="assets/images/instagram.png"></a>
         <a href="https://www.linkedin.com/in/livia-welschinger/" target="_blank"><img class="icon"
-                                                                                      src="images/linkedin.png"></a>
+                                                                                      src="assets/images/linkedin.png"></a>
         <a href="https://www.xing.com/profile/Livia_Welschinger/cv" target="_blank"><img class="icon"
-                                                                                         src="images/xing.png"></a>
+                                                                                         src="assets/images/xing.png"></a>
     </div>
 
 </footer>
