--- a/index.html
+++ b/index.html
@@ -71,6 +71,38 @@
             </div>
         </div>
     </section>
+    <section id="skills">
+        <div class="grid">
+            <div class="section-headline-div">
+                <h3>My skills</h3>
+                <div class="section-headline-underline" id="section-headline-underline-skills"></div>
+            </div>
+            <div class="section-text">
+                <p>
+                    Liking the idea of building holistic websites and applications, I enjoy being a full stack developer. Hence I'm able to not only build the reliable business logic of an application but also an appealing user interface with which users enjoy to interact with.
+                </p>
+            </div>
+            <div class="section-text" id="skills-lists">
+                <p class="skill-headline">front-end skills</p>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>jQuery</li>
+                    <li>Thymeleaf</li>
+                </ul>
+                <p class="skill-headline">back-end skills</p>
+                <ul>
+                    <li>Java</li>
+                    <li>Spring Framework</li>
+                    <li>Spring Boot</li>
+                    <li>Spring Cloud</li>
+                    <li>SQL + NoSQL</li>
+                    <li>Docker</li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <section id="projects">
         <div class="grid">
             <div class="section-headline-div">
