Add project info

--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
                     I really enjoy building things and being creative. Have a look on some of my projects I have been
                     working on.
                 </p>
+                <br>
+                <p>
+                    PROJECTS COMING SOON
+                </p>
             </div>
         </div>
     </section>
