Edit contact option

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p id="home-p">I solve problems with design and code, put together in a creative solution.</p>
             <div class="button-group">
                 <a href="#about" class=" button primary-button">Get to know me</a>
-                <a href="#contact" class="button secondary-button">Contact me</a>
+                <a href="mailto:liviacodes@t-online.de" class="button secondary-button">Contact me</a>
             </div>
 
         </div>
@@ -142,8 +142,7 @@
                 </p>
 
                 <div id="button-div">
-                    <a href="mailto:liviacodes@t-online.de" class="button primary-button" id="contact-btn">Leave a
-                        message</a>
+                    <a href="mailto:liviacodes@t-online.de" class="button primary-button" id="contact-btn">Let's connect</a>
                 </div>
             </div>
 
