Change hero section slogan

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     new TypeIt("#type-text", {
         speed: 60
     })
-        .type("Software developer", {speed: 60})
+        .type("Developer", {speed: 60})
         .pause(1000)
         .delete(null, {deletionSpeed: 80})
         .type("Creative mind", {speed: 60})
