Correct grammar mistake

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="section-text">
                 <p>
-                    Liking the idea of building holistic websites and applications, I enjoy being a full stack developer. Hence I'm able to not only build the reliable business logic of an application but also an appealing user interface with which users enjoy to interact with.
+                    Liking the idea of building holistic websites and applications, I enjoy being a full stack developer. Hence I'm able to not only build the reliable business logic of an application but also an appealing user interface with users enjoy to interact with.
                 </p>
             </div>
             <div class="section-text" id="skills-lists">
